force-app/main/default/objects/WhatChanged_Setting__mdt/WhatChanged_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the WhatChanged application. The record named "Default" is read by WhatChangedSettings.</description>
    <label>WhatChanged Setting</label>
    <pluralLabel>WhatChanged Settings</pluralLabel>
</CustomObject>