force-app/main/default/objects/WhatChanged_Setting__mdt/fields/Aggregate_Sample_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Sample_Limit__c</fullName>
    <label>Aggregate Sample Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>How many of the most recent rows in range are sampled for category/severity/hour/section/people distributions (SetupAuditTrail cannot GROUP BY). 200-5000, default 2000.</description>
</CustomField>