force-app/main/default/objects/WhatChanged_Setting__mdt/fields/Attention_Automation_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Attention_Automation_Threshold__c</fullName>
    <label>Attention Automation Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Minimum automation changes per day before the Overview raises an attention item. Default 5.</description>
</CustomField>