force-app/main/default/objects/WhatChanged_Setting__mdt/fields/Classifier_Strategy_Class__c.field-meta.xml
<CustomField>
    <fullName>Classifier_Strategy_Class__c</fullName>
    <label>Classifier Strategy Class</label>
    <length>255</length>
    <type>Text</type>
    <description>Apex class implementing WhatChangedClassifier.IClassificationStrategy. Blank = default rule-engine strategy.</description>
</CustomField>