force-app/main/default/objects/WhatChanged_Setting__mdt/fields/Max_Scan_Iterations__c.field-meta.xml
<CustomField>
    <fullName>Max_Scan_Iterations__c</fullName>
    <label>Max Scan Iterations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Upper bound on keyset scan iterations per events request when filters cannot be pushed into SOQL. 1-50, default 20.</description>
</CustomField>